Chonker/Tests/Error/access_empty.chonk
function void hmmTodayIWillAccessVoid()
{
    return;
}

print hmmTodayIWillAccessVoid();